color: Convert BitmapImage to sRGB ahead of time

We are always sending these images to sRGB canvases, so do the
conversion ahead of time.

This fixes a bug wherein, when a WebGLRenderingContext reads a
BitmapImage it wants the image to be in sRGB (if not-none was
requested). We will eventually need to decide how a color-canvas-using
WebGLRenderingContext should handle non-sRGB images.

BUG=730983

Review-Url: https://codereview.chromium.org/2924373002
Cr-Commit-Position: refs/heads/master@{#478564}

Former-commit-id: 64db61998368ffd368f477a57b749f9a5a0dc9aa